# kv-eviction

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  TODO.md  attention_matching_vllm.md  pyproject.toml  setup.sh  slurm-9314407.out  slurm-9314560.out  slurm-9321153.out
debug/: chained_admission_bug_explained.txt
experiments/: test_compaction_direct.py  test_protected_prefix.py
experiments/tau2bench_env/: pyproject.toml  tau2_bench_train.py
experiments/taubench_env/: README.md  pyproject.toml  tau_bench_train.py
experiments/textworld_env/: LAUNCH.md  README.md  compaction_debug.py  eval_textworld.py  generate_dataset.py  prepare_dataset.sh  pyproject.toml  run_compaction_only.sh  run_full_context_only.sh  run_inference_test.sh  textworld_env.py
explanations/: explanation_bug_0_non_monotonic_compaction_boundary.md  explanation_bug_1_heavy_kl_mismatch_with_compaction.md  explanation_bug_2_prompt_aligned_len_mismatch_with_protected_prefix.md
plans/: admission_trim_kl_fix.md  attention_matching_continuous_batching.md  block_aligned_message_padding.md  compaction_entrypoints.md  kv_corruption_am_robustness_results.md  kv_corruption_future_experiments.md  llm_manage_own_context.md  markovian_summary.md  markovian_thinker_baseline.md  no_eviction_baseline_fix.md  phase1_repo_setup.md  phase2_vllm_compaction.md  phase3_training_integration.md  phase4_experiments.md  phase_b_multiturn_compaction.md  piecewise_position_offset.md  prefill_time_turn_compaction.md  prime_rl_message_padding_patch.md  single_forward_pre_eviction.md  summary_compaction_events_fix.md  turn_based_eviction.md
scripts/: am_log_stats.py  compaction_success_by_count.py  install_balrog.sh  noise_success_by_count.py  shuffle_success_by_count.py  vf_eval_with_kv_eviction.py  viz_training_rollouts.py  wandb_aime_eval_monitor.py
src/: balrog_bench.py
tests/: test_continual_deviation.py  test_continual_deviation_jax.py  test_env_events.py  test_padding.py  test_padding_interceptor.py  test_segmented_forward.py  (+4 more)
(+237 files in other folders)
