[project]
name = "tau2-bench-train"
version = "0.1.0"
description = "Training-capable wrapper around primeintellect/tau2-bench (aliases eval_dataset as the training set)"
requires-python = ">=3.12"
dependencies = [
    "verifiers>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "tau2_bench_train.py",
    "pyproject.toml",
    "README.md",
]
